<resources>
    <string name="app_name">Human Activity Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please Wait...</string>
    <string name="please_wait_connecting">Connecting may take 10-30s \nPlease Wait...</string>
    <string name="connecting">Connecting</string>
    <string name="loading_information">Loading information...</string>
    <string name="disconnect_dialog_text">Leaving from this view will disconnect You with device. Are You sure want leave?</string>
    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Bluetooth LE scanning requires location permission</string>
    <string name="btn_ok">OK</string>
    <string name="multisubscribe_note_text">Important Note:\n  On some phones Subscribing 3(and more) sensors can cause Bluetooth connection problem and restart app might be required.</string>

    <!--Main view string -->
    <string name="sensors_training_text">Training</string>
    <string name="session_evaluation_text">Recognition</string>
    <string name="sensors_setup_text">Sensors Setup</string>
    <string name="session_manager_text">Sessions Manager</string>
    <string name="settings_text">User Settings</string>
    <string name="telemetry_text">3D Evaluation</string>
    <string name="footer_text">TEAM123 - 2019</string>
    <string name="user_text">Welcome: Riusaki</string>
    <string name="user_hint_text">Set user name</string>

    <!--Sensors view string -->
    <string name="start_training_text">Start Training</string>
    <string name="stop_training_text">Stop Training</string>
    <string name="start_session_text">Start Recognition</string>
    <string name="add_device_text">Add Devices for connection</string>
    <string name="deafaul_activity_text">Activity: ...</string>
    <string name="deafaul_method_text">Saving method: ...</string>
    <string name="no_implemented_text">This feature will be available soon</string>
    <string name="connect_text">Connect</string>
    <string name="stop_text">Stop Training</string>
    <string name="restart_text">Restart</string>
    <string name="stop_evaluation_text">Stop</string>
    <string name="start_evaluation_text">Start</string>
    <string name="upload_text">AWS</string>
    <string name="upload_text2">Local</string>
    <string name="cancel_text">Cancel</string>
    <string name="select_text">Select</string>
    <string name="save_text">Save</string>
    <string name="select_location_sensor">Select a location for the sensor:</string>
    <string name="select_activity_session">Select an activity for the session:</string>
    <string name="select_saving_method">Select saving method:</string>
    <string name="user_name_title">User Name:</string>
    <string name="location_stomach">Waist</string>
    <string name="location_back">Back</string>
    <string name="location_chest">Chest</string>
    <string name="location_luarm">Left Upper Arm</string>
    <string name="location_llarm">Left Lower Arm</string>
    <string name="location_ruarm">Right Upper Arm</string>
    <string name="location_rlarm">Right Lower Arm</string>
    <string name="location_luleg">Left Upper Leg</string>
    <string name="location_llleg">Left Lower Leg</string>
    <string name="location_ruleg">Right Upper Leg</string>
    <string name="location_rlleg">Right Lower Leg</string>


    <string name="activity_jump">Standing</string>
    <string name="activity_limp">Walking upstairs</string>
    <string name="activity_lying">Walking downstairs</string>
    <string name="activity_run">Sitting</string>
    <string name="activity_walk">Walking</string>
    <string name="activity_workout">Lying</string>

    <string name="movesense_device_name">Movesense</string>
    <string name="dfu_device_name">DfuTarg</string>
    <string name="test_multi_subscription">Test: Multi Subscription</string>
    <string name="off_on">OFF / ON</string>
    <string name="y">y:</string>
    <string name="x">x:</string>
    <string name="z">z:</string>
    <string name="battery_text">90</string>
    <string name="Movesense">Movesense</string>

</resources>
