<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorMainViewCardBackground"
              android:orientation="vertical">


    <TextView
        android:id="@+id/tv_select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_location_sensor"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:background="@android:color/white"/>

    <RadioGroup
        android:id="@+id/rg_location_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_divider"
        android:orientation="vertical"
        android:paddingLeft="30dp">

        <RadioButton
            android:id="@+id/rb_location_stomach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:checked="true"
            android:text="@string/location_stomach" />

        <RadioButton
            android:id="@+id/rb_location_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_back" />

        <RadioButton
            android:id="@+id/rb_location_chest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_chest" />

        <RadioButton
            android:id="@+id/rb_location_luarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_luarm" />

        <RadioButton
            android:id="@+id/rb_location_llarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_llarm" />

        <RadioButton
            android:id="@+id/rb_location_ruarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_ruarm" />

        <RadioButton
            android:id="@+id/rb_location_rlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_rlarm" />

        <RadioButton
            android:id="@+id/rb_location_luleg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_luleg" />

        <RadioButton
            android:id="@+id/rb_location_llleg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_llleg" />

        <RadioButton
            android:id="@+id/rb_location_ruleg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_ruleg" />

        <RadioButton
            android:id="@+id/rb_location_rlleg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/location_rlleg" />

    </RadioGroup>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/setup_buttons"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal|center_vertical">

        <TextView
            android:id="@+id/multiConnection_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_stroke"
            android:text="@string/connect_text"
            android:textColor="@color/colorText"

            android:textSize="16sp" />

        <TextView
            android:id="@+id/multiConnection_cancel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_toRightOf="@id/multiConnection_connect"
            android:background="@drawable/yellow_stroke"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:text="@string/cancel_text"
            />

    </RelativeLayout>

</LinearLayout>
