<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="8dp">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/scroll_sensors_connected"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorBackground"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


    </android.support.v7.widget.RecyclerView>


    <TextView
        android:id="@+id/tv_select_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_activity_session"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/v_divider"
        />
    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:textSize="14sp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rg_session_activities"
        />
    <RadioGroup
        android:id="@+id/rg_session_activities"
        android:scaleType="fitCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_divider"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/v_divider2">

        <RadioButton
            android:id="@+id/rb_activity_jump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/activity_jump" />

        <RadioButton
            android:id="@+id/rb_activity_limp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/activity_limp" />

        <RadioButton
            android:id="@+id/rb_activity_lying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/activity_lying" />

        <RadioButton
            android:id="@+id/rb_activity_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/activity_run" />

        <RadioButton
            android:id="@+id/rb_activity_walk"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/activity_walk" />

        <RadioButton
            android:id="@+id/rb_activity_workout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/activity_workout" />

    </RadioGroup>

    <View
        android:id="@+id/v_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:textSize="14sp"
        android:background="@android:color/white"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sessionManger_savingmethod_tv"
        />

        <!--<ImageView
            android:id="@+id/sessionManger_img"
            android:scaleType="fitCenter"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_walk_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sessionManger_activity_tv"/> -->

    <TextView
        android:id="@+id/sessionManger_savingmethod_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:text="@string/deafaul_method_text"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sessionManger_activity_tv"/>
    <TextView
        android:id="@+id/sessionManger_activity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:text="@string/deafaul_activity_text"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sessionManger_buttons"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sessionManger_buttons"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal|center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/sessionManger_start"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_stroke"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:text="@string/start_training_text"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

      <TextView
            android:id="@+id/sessionManger_stop"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/sessionManger_start"
            android:background="@drawable/yellow_stroke_uno"
            android:padding="10dp"
            android:text="@string/stop_text"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:textSize="14sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

