<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorMainViewCardBackground"
              android:orientation="vertical">


    <TextView
        android:id="@+id/tv_select_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_saving_method"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:background="@android:color/white"/>

    <RadioGroup
        android:id="@+id/rg_session_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_divider"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal|center_vertical">

        <RadioButton
            android:id="@+id/rb_activity_jump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:checked="true"
            android:textSize="18sp"
            android:text="@string/upload_text" />

        <RadioButton
            android:id="@+id/rb_activity_limp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:text="@string/upload_text2" />


    </RadioGroup>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/session_activity_buttons"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="40dp"
        android:layout_gravity="center_horizontal|center_vertical">

        <TextView
            android:id="@+id/sessionManger_select_activity"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:background="@drawable/yellow_stroke"
            android:text="@string/select_text"
            android:textColor="@color/colorText"

            android:textSize="16sp" />

        <TextView
            android:id="@+id/sessionManger_cancel_activity"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_toRightOf="@id/sessionManger_select_activity"
            android:background="@drawable/yellow_stroke"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:text="@string/cancel_text"
            />

    </RelativeLayout>

</LinearLayout>
