<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainViewCardBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_change_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/settings_text"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:background="@android:color/white"/>

    <LinearLayout
        android:id="@+id/ly_title_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_select_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/user_name_title"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_texteditor_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/user_hint_text"
            android:textColorHint="@color/ButtonColorBackground"
            android:textColor="@color/colorText"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="5dp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ly_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/user_hint_text"
            android:textColor="@color/colorYellow"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_settings_buttons"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="50dp"
        android:layout_gravity="center_horizontal|center_vertical">

        <TextView
            android:id="@+id/userSettings_save"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:background="@drawable/yellow_stroke"
            android:text="@string/save_text"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/userSettings_cancel_save"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:background="@drawable/yellow_stroke"
            android:text="@string/cancel_text"
            android:layout_toRightOf="@id/userSettings_save"
            android:textColor="@color/colorText"
            android:textSize="16sp"

            />

    </RelativeLayout>

</LinearLayout>
